--- a/_posts/2022-09-18-covid.md
+++ b/_posts/2022-09-18-covid.md
@@ -1,5 +1,7 @@
-# Covid
-
+---
+layout: post
+title: Covid
+---
 After 2.5 years, I finally tested positive for Covid. I have a few thoughts:
 
 - Using the term "mild" to describe my symptoms is bad. It makes it sound like I had to blow my nose a couple of times. My symptoms may have been mild *relative to the worst case* but they were still pretty bad. I lost basically an entire week of work. I didn't have breathing troubles, but if this had been a cold, it would have been a severe cold. Does it matter? I think it does. We should avoid Covid even if we expect to have mild symptoms. It's costly to you, your family, your employer, your coworkers, and society in general.
